Update the ActiveMQ endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.activemq.broker-url=tcp://52.87.235.68:8161/
+spring.activemq.broker-url=tcp://35.168.113.145:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 
